# rust-aws-tui

./: .markdownlint-cli2.yaml  Cargo.toml  Makefile  README.md  TODO.md  config.toml
src/: config.rs  main.rs  toml_parser.rs  ui.rs  utils.rs
src/app_state/: date_selection.rs  function_selection.rs  log_viewer.rs  mod.rs  profile_selection.rs
src/ui/: date_selection.rs  function_list_view.rs  log_view.rs  mod.rs  profile_list_view.rs
src/utils/: mod.rs  ui_utils.rs
