[package]
name = "rust_tui_app"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.24.0"
crossterm = "0.27.0"
anyhow = "1.0.75"
aws-config = "1.5.8"
aws-sdk-lambda = "1.51.0"
tokio = { version = "1.32.0", features = ["full"] }
toml = "0.8.19"
serde = { version = "1.0.213", features = ["derive"] }
dirs = "5.0"
chrono = "0.4"
aws-sdk-cloudwatchlogs = "1.52.0"
serde_json = "1.0"

[dev-dependencies]
cargo-watch = "8.4.0"
